k8s/services/prometheus-direct.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: twisterlab
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: prometheus
  namespace: twisterlab
subsets:
- addresses:
  - ip: 10.42.0.217
  ports:
  - port: 9090
    protocol: TCP
