k8s/services/prometheus-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: twisterlab
spec:
  type: ExternalName
  externalName: prometheus.monitoring.svc.cluster.local
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
